# jetson-reinforcement

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePreBuild.sh  Dockerfile.aarch64  Dockerfile.base  Dockerfile.x86_64  LICENSE.md  README.md
c/: aiAgent.cpp  aiAgent.h  deepQLearner.cpp  deepQLearner.h  deepQLearner.lua.cpp  deepQLearner.py.cpp  deepRL.h  deepRL.py.cpp  dqnAgent.cpp  dqnAgent.h  pyTensor.cpp  pyTensor.h  pyTorch.h  rlAgent.cpp  rlAgent.h
cuda/: cudaMappedMemory.h  cudaPlanar.cu  cudaPlanar.h  cudaUtility.h
docker/: build.sh  push.sh  run.sh  tag.sh
gazebo/: ArmPlugin.cpp  ArmPlugin.h  CMakeLists.txt  GazeboUtils.h  PropPlugin.cpp  PropPlugin.h  RoverPlugin.cpp  RoverPlugin.h  gazebo-arm.sh  gazebo-arm.world  gazebo-rover.sh  gazebo-rover.world
gazebo/meshes/kr210l150/: README.md
lua/: DDPG.lua  DQN-0.lua  DQN-1.lua  DQN-2.lua  DQN.lua  catchDQN.lua  catchENV.lua  hello-lua.lua  hello.lua  test-cutorch.lua  test-lua.lua  test-packages.lua  test-torch.lua
lua/DDPG/: GradientClipping.lua  GradientNormalization.lua  LinearO.lua  base.lua  log.lua
python/: CRNN.py  DQN.py  RL.py  gym-DQN.py  gym-RL.py  gym-actorCritic.py  intro-DQN.ipynb  intro-pytorch.ipynb  test-interop.py  test-torch.py
samples/: CMakeLists.txt  baselines.py  list_envs.py  list_versions.py  reinforcement_q_learning.py
samples/0-catch/: CMakeLists.txt  catch.cpp
samples/catch/: CMakeLists.txt  catch.cpp
samples/fruit/: fruit.cpp  fruitEnv.cpp  fruitEnv.h
tools/: CMakeLists.txt
tools/console/: CMakeLists.txt  main.cpp  main.lua.cpp  main.py.cpp
tools/diag/: CMakeLists.txt  main.cpp  main.py.cpp
tools/diagnostic/: CMakeLists.txt  main.lua.cpp  main.py.cpp
tools/input/: CMakeLists.txt  main.cpp
util/: devGamepad.h  devInput.cpp  devInput.h  devJoystick.cpp  devJoystick.h  devKeyboard.cpp  devKeyboard.h
